[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "lucide"
version = "1.1.0"
description = "Use lucide in your Django and Jinja templates."
readme = "README.md"
keywords = [
  "Django",
]
license = { text = "MIT" }
authors = [
  { name = "Francisco Macedo", email = "me@fmacedo.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]

optional-dependencies.django = [
  "django>=2.2",
]
optional-dependencies.jinja = [
  "jinja2>=2.8",
]
urls.Changelog = "https://github.com/franciscobmacedo/lucide/blob/main/CHANGELOG.md"
urls.Funding = "https://ko-fi.com/fmacedo"
urls.Repository = "https://github.com/franciscobmacedo/lucide"

[tool.isort]
add_imports = [
  "from __future__ import annotations",
]
force_single_line = true
profile = "black"

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    """

[tool.coverage.run]
branch = true
parallel = true
source = [
  "lucide",
  "tests",
]

[tool.coverage.paths]
source = [
  "src",
  ".tox/**/site-packages",
]

[tool.coverage.report]
show_missing = true

[tool.mypy]
mypy_path = "src/"
namespace_packages = false
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.rstcheck]
report_level = "ERROR"
